box contract and governance token contract added

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "hardhat": "^2.9.0",
     "harhat": "^1.0.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0"
   }
 }
